--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ jsonschema==3.2.0
 MarkupSafe==1.1.1
 paramiko==2.7.2
 pathspec==0.5.9
+psycopg2-binary==2.8.6
 pycparser==2.20
 PyNaCl==1.4.0
 pyrsistent==0.17.3
